--- a/Serendipity/User Interface/Chat/ChatView.xib
+++ b/Serendipity/User Interface/Chat/ChatView.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChatViewController">
             <connections>
+                <outlet property="topContainer" destination="Ofy-Ld-LBU" id="Y99-gG-ovE"/>
                 <outlet property="view" destination="iN0-l3-epB" id="K7O-w9-zO2"/>
             </connections>
         </placeholder>
@@ -13,7 +14,41 @@
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ofy-Ld-LBU" userLabel="Top Container">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="476"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qia-w0-jvz">
+                    <rect key="frame" x="30" y="508" width="43" height="30"/>
+                    <state key="normal" title="Player">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="showPlayer:" destination="-1" eventType="touchUpInside" id="Yu1-3p-cd7"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mDR-0z-d2U">
+                    <rect key="frame" x="230" y="508" width="63" height="30"/>
+                    <state key="normal" title="Recorder">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="showRecorder:" destination="-1" eventType="touchUpInside" id="gPn-zt-pD9"/>
+                    </connections>
+                </button>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="mDR-0z-d2U" secondAttribute="trailing" constant="27" id="7C3-Jy-9Ad"/>
+                <constraint firstItem="Ofy-Ld-LBU" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="CWl-Q8-FbY"/>
+                <constraint firstItem="Qia-w0-jvz" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="DnP-kg-e7z"/>
+                <constraint firstAttribute="bottom" secondItem="Ofy-Ld-LBU" secondAttribute="bottom" constant="92" id="LbO-b5-o1j"/>
+                <constraint firstItem="Qia-w0-jvz" firstAttribute="baseline" secondItem="mDR-0z-d2U" secondAttribute="baseline" id="SdJ-LT-F0M"/>
+                <constraint firstItem="Qia-w0-jvz" firstAttribute="top" secondItem="Ofy-Ld-LBU" secondAttribute="bottom" constant="32" id="cYV-4n-GuP"/>
+                <constraint firstAttribute="trailing" secondItem="Ofy-Ld-LBU" secondAttribute="trailing" id="kIb-WQ-FpE"/>
+                <constraint firstItem="Ofy-Ld-LBU" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="xFu-jz-87F"/>
+            </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
