--- a/Serendipity/User Interface/Settings/SettingsView.xib
+++ b/Serendipity/User Interface/Settings/SettingsView.xib
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6750" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingsViewController">
             <connections>
+                <outlet property="avatarView" destination="Nrc-Dc-N50" id="Iv4-yQ-FrW"/>
+                <outlet property="nameLabel" destination="3ic-hO-IZ3" id="wFn-uw-Ivz"/>
+                <outlet property="versionLabel" destination="OLW-ee-in0" id="joL-fA-cd9"/>
                 <outlet property="view" destination="iN0-l3-epB" id="K7O-w9-zO2"/>
             </connections>
         </placeholder>
@@ -13,8 +17,123 @@
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nrc-Dc-N50" userLabel="Avatar">
+                    <rect key="frame" x="110" y="100" width="100" height="100"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="Nrc-Dc-N50" secondAttribute="height" multiplier="1:1" id="Umh-NB-xqv"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="dFx-JM-zbi"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lola Forner" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ic-hO-IZ3" userLabel="Name">
+                    <rect key="frame" x="116" y="213" width="88.5" height="23.5"/>
+                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="View Profile" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YrU-g9-qUp">
+                    <rect key="frame" x="133" y="240" width="54.5" height="12"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iUs-yy-2U3" userLabel="View Profile Button">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="273"/>
+                    <state key="normal">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="viewProfile:" destination="-1" eventType="touchUpInside" id="SHU-2Q-XU6"/>
+                    </connections>
+                </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lXU-gX-flt">
+                    <rect key="frame" x="0.0" y="273" width="320" height="295"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mao-Jc-hqD">
+                            <rect key="frame" x="101" y="69" width="118" height="36"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <state key="normal" title="Invite Friends">
+                                <color key="titleColor" red="0.21960784310000001" green="0.75294117650000003" blue="0.90588235289999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="inviteFriends:" destination="-1" eventType="touchUpInside" id="g1h-tn-RIn"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YW7-wb-mH4">
+                            <rect key="frame" x="0.0" y="265" width="60" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="60" id="QJz-6v-OQp"/>
+                                <constraint firstAttribute="height" constant="30" id="vFk-Xe-SjC"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                            <state key="normal" title="Log out">
+                                <color key="titleColor" red="0.83658088235294115" green="0.18369070469647986" blue="0.18369070469647986" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="logout:" destination="-1" eventType="touchUpInside" id="Ib8-VB-SOq"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Version v0.1 (112)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OLW-ee-in0">
+                            <rect key="frame" x="228" y="275" width="83.5" height="12"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sif-w2-Kce">
+                            <rect key="frame" x="91" y="143" width="139" height="36"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <state key="normal" title="Send Feedback">
+                                <color key="titleColor" red="0.21960784310000001" green="0.75294117650000003" blue="0.90588235289999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="sendFeedback:" destination="-1" eventType="touchUpInside" id="z8f-ou-coU"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="Sif-w2-Kce" firstAttribute="centerX" secondItem="mao-Jc-hqD" secondAttribute="centerX" constant="0.5" id="2Sx-BU-uOc"/>
+                        <constraint firstAttribute="bottom" secondItem="YW7-wb-mH4" secondAttribute="bottom" id="59k-UN-Cf5"/>
+                        <constraint firstAttribute="centerY" secondItem="mao-Jc-hqD" secondAttribute="centerY" priority="750" constant="60.5" id="CES-XJ-40d"/>
+                        <constraint firstItem="Sif-w2-Kce" firstAttribute="top" secondItem="mao-Jc-hqD" secondAttribute="bottom" constant="38" id="PFE-wQ-H7I"/>
+                        <constraint firstAttribute="trailing" secondItem="OLW-ee-in0" secondAttribute="trailing" constant="8" id="WZx-bV-LFZ"/>
+                        <constraint firstItem="mao-Jc-hqD" firstAttribute="top" relation="greaterThanOrEqual" secondItem="lXU-gX-flt" secondAttribute="top" constant="50" id="cSD-Bp-wuR"/>
+                        <constraint firstItem="YW7-wb-mH4" firstAttribute="leading" secondItem="lXU-gX-flt" secondAttribute="leading" id="fgI-ez-ndO"/>
+                        <constraint firstAttribute="centerX" secondItem="mao-Jc-hqD" secondAttribute="centerX" id="qCP-pn-iTW"/>
+                        <constraint firstAttribute="bottom" secondItem="OLW-ee-in0" secondAttribute="bottom" constant="8" id="yOk-lJ-yPJ"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="Nrc-Dc-N50" firstAttribute="centerX" secondItem="3ic-hO-IZ3" secondAttribute="centerX" id="785-Xa-e2t"/>
+                <constraint firstAttribute="centerX" secondItem="Nrc-Dc-N50" secondAttribute="centerX" id="8s8-ac-Mww"/>
+                <constraint firstItem="lXU-gX-flt" firstAttribute="top" secondItem="iUs-yy-2U3" secondAttribute="bottom" id="9OM-h9-gUy"/>
+                <constraint firstItem="YrU-g9-qUp" firstAttribute="centerX" secondItem="3ic-hO-IZ3" secondAttribute="centerX" constant="-0.25" id="GbE-2z-zDq"/>
+                <constraint firstAttribute="trailing" secondItem="iUs-yy-2U3" secondAttribute="trailing" id="ISc-QG-Ikb"/>
+                <constraint firstItem="3ic-hO-IZ3" firstAttribute="top" secondItem="Nrc-Dc-N50" secondAttribute="bottom" constant="13" id="OjX-L6-Gkj"/>
+                <constraint firstItem="iUs-yy-2U3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="QJ2-WE-TzQ"/>
+                <constraint firstAttribute="bottom" secondItem="lXU-gX-flt" secondAttribute="bottom" id="Rxj-sN-baW"/>
+                <constraint firstItem="iUs-yy-2U3" firstAttribute="leading" secondItem="lXU-gX-flt" secondAttribute="trailing" constant="-320" id="SLo-uR-ga5"/>
+                <constraint firstItem="lXU-gX-flt" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="SW7-kw-8Oe"/>
+                <constraint firstItem="lXU-gX-flt" firstAttribute="top" secondItem="YrU-g9-qUp" secondAttribute="bottom" constant="21" id="Z1J-9u-hLz"/>
+                <constraint firstAttribute="trailing" secondItem="lXU-gX-flt" secondAttribute="trailing" id="cOv-7Q-4EI"/>
+                <constraint firstItem="Nrc-Dc-N50" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" priority="751" constant="110" id="eHJ-7C-4T9"/>
+                <constraint firstItem="Nrc-Dc-N50" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="100" id="hXw-A0-reB"/>
+                <constraint firstItem="YrU-g9-qUp" firstAttribute="top" secondItem="3ic-hO-IZ3" secondAttribute="bottom" constant="3.5" id="vbo-Vf-kKo"/>
+                <constraint firstItem="iUs-yy-2U3" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="xdO-GK-vhN"/>
+            </constraints>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="SLo-uR-ga5"/>
+                </mask>
+            </variation>
+            <point key="canvasLocation" x="338" y="329"/>
         </view>
     </objects>
 </document>
