--- a/Serendipity/Base.lproj/Main.storyboard
+++ b/Serendipity/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
                     <navigationItem key="navigationItem" title="My Profile" id="vUc-qU-qhl">
                         <barButtonItem key="rightBarButtonItem" title="Edit" id="fxU-ar-kdx">
                             <connections>
-                                <segue destination="Lqa-Xo-Tcw" kind="custom" customClass="PushFromLeftSegue" customModule="Serendipity" customModuleProvider="target" id="Q7K-Wx-pjZ"/>
+                                <segue destination="Lqa-Xo-Tcw" kind="show" id="Q7K-Wx-pjZ"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -20,7 +20,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5S-Ky-nbE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-68" y="1592"/>
+            <point key="canvasLocation" x="-68" y="1587"/>
         </scene>
         <!--Signup View Controller-->
         <scene sceneID="ufC-wZ-h7g">
@@ -31,7 +31,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="288" y="872"/>
+            <point key="canvasLocation" x="300" y="872"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="d4d-05-BTY">
@@ -47,7 +47,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fR6-RZ-qMo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="463" y="212"/>
+            <point key="canvasLocation" x="487" y="228"/>
         </scene>
         <!--Discover-->
         <scene sceneID="5fm-o7-1g2">
@@ -69,12 +69,12 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <segue destination="YUi-xK-iJg" kind="show" identifier="DiscoverToConnections" id="oMK-eI-csk"/>
-                        <segue destination="Vhy-hq-gwn" kind="custom" identifier="DiscoverToSettings" customClass="PushFromLeftSegue" customModule="Serendipity" customModuleProvider="target" id="md6-zB-tVo"/>
+                        <segue destination="Vhy-hq-gwn" kind="show" identifier="DiscoverToSettings" id="md6-zB-tVo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TlQ-8h-TWe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="664" y="872"/>
+            <point key="canvasLocation" x="676" y="872"/>
         </scene>
         <!--Connections-->
         <scene sceneID="mW7-zq-TQ3">
@@ -89,7 +89,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y2Q-Pb-RU0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1053" y="1592"/>
+            <point key="canvasLocation" x="1053" y="1587"/>
         </scene>
         <!--Chat View Controller-->
         <scene sceneID="bLH-YZ-QSJ">
@@ -100,7 +100,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B9f-P8-SG1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1419" y="1592"/>
+            <point key="canvasLocation" x="1419" y="1587"/>
         </scene>
         <!--Video Recorder View Controller-->
         <scene sceneID="Eyk-Cd-rkc">
@@ -110,7 +110,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4iI-Tj-bCf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1802" y="1592"/>
+            <point key="canvasLocation" x="1802" y="1587"/>
         </scene>
         <!--Edit Profile View Controller-->
         <scene sceneID="98E-xT-5yo">
@@ -121,29 +121,23 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WMP-6s-UTq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-448" y="1592"/>
+            <point key="canvasLocation" x="-448" y="1587"/>
         </scene>
         <!--Settings-->
         <scene sceneID="6E1-Ce-dgY">
             <objects>
                 <viewController storyboardIdentifier="Settings" id="Vhy-hq-gwn" customClass="SettingsViewController" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" title="Settings" id="Ot3-Pt-0WY">
-                        <barButtonItem key="rightBarButtonItem" title="Discover" id="2aN-i2-m7a">
-                            <connections>
-                                <action selector="backToDiscover:" destination="Vhy-hq-gwn" id="7zh-ZA-K4Q"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Settings" id="Ot3-Pt-0WY"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <segue destination="bQv-dO-auU" kind="custom" identifier="SettingsToProfile" customClass="PushFromLeftSegue" customModule="Serendipity" customModuleProvider="target" id="wnv-o0-kZH"/>
+                        <segue destination="bQv-dO-auU" kind="show" identifier="SettingsToProfile" id="wnv-o0-kZH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zfc-Bp-zvE" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationItem title="Settings" id="4PF-BM-XHD"/>
             </objects>
-            <point key="canvasLocation" x="312" y="1592"/>
+            <point key="canvasLocation" x="312" y="1587"/>
         </scene>
     </scenes>
 </document>
