--- a/Serendipity/User Interface/Profile/EditProfileView.xib
+++ b/Serendipity/User Interface/Profile/EditProfileView.xib
@@ -43,7 +43,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="203" id="hg1-ER-J81"/>
                     </constraints>
-                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                    <string key="text">I just want some 80's movie romance. That's it. I swear I'm not that hard to please. Just be John Cusack outside my window with a boombox.</string>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
