--- a/Serendipity/User Interface/Connections/ConnectionCell.xib
+++ b/Serendipity/User Interface/Connections/ConnectionCell.xib
@@ -1,60 +1,61 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6750" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ConnectionCell" customModule="Serendipity" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="cAY-2f-1lU" customClass="ConnectionCell" customModule="Serendipity" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2C2-G4-yXf" userLabel="Avatar">
-                    <rect key="frame" x="13" y="10" width="80" height="80"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="80" id="mYg-9s-vqL"/>
-                        <constraint firstAttribute="width" constant="80" id="s1b-sL-mU9"/>
-                    </constraints>
-                </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sara" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7rM-02-dZt" userLabel="Name">
-                    <rect key="frame" x="116" y="23" width="35" height="24"/>
-                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5 mins ago" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gpZ-bc-q3K" userLabel="Time">
-                    <rect key="frame" x="116" y="54" width="65" height="16"/>
-                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&gt;" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nrv-C2-jq3">
-                    <rect key="frame" x="290" y="23" width="28" height="69"/>
-                    <fontDescription key="fontDescription" name="AlNile" family="Al Nile" pointSize="50"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-            </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            <constraints>
-                <constraint firstAttribute="trailing" secondItem="Nrv-C2-jq3" secondAttribute="trailing" constant="2" id="1bj-tO-bzI"/>
-                <constraint firstAttribute="centerY" secondItem="2C2-G4-yXf" secondAttribute="centerY" id="H57-Gz-ub5"/>
-                <constraint firstAttribute="centerY" secondItem="Nrv-C2-jq3" secondAttribute="centerY" constant="-7.5" id="ky2-0H-Hgz"/>
-                <constraint firstItem="gpZ-bc-q3K" firstAttribute="top" secondItem="7rM-02-dZt" secondAttribute="bottom" constant="7" id="lW0-DK-lQb"/>
-                <constraint firstItem="2C2-G4-yXf" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="13" id="ldt-0d-jLV"/>
-                <constraint firstItem="7rM-02-dZt" firstAttribute="top" secondItem="2C2-G4-yXf" secondAttribute="top" constant="13" id="sHz-8s-oEA"/>
-                <constraint firstItem="7rM-02-dZt" firstAttribute="leading" secondItem="2C2-G4-yXf" secondAttribute="trailing" constant="23" id="tTa-vr-1h0"/>
-                <constraint firstItem="gpZ-bc-q3K" firstAttribute="leading" secondItem="2C2-G4-yXf" secondAttribute="trailing" constant="23" id="z2y-Wg-cF7"/>
-            </constraints>
-            <nil key="simulatedStatusBarMetrics"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cAY-2f-1lU" id="Ctw-G5-cnb">
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2C2-G4-yXf" userLabel="Avatar">
+                        <rect key="frame" x="8" y="9" width="80" height="80"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="80" id="mYg-9s-vqL"/>
+                            <constraint firstAttribute="width" constant="80" id="s1b-sL-mU9"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sara" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7rM-02-dZt" userLabel="Name">
+                        <rect key="frame" x="111" y="22.5" width="34.5" height="23.5"/>
+                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5 mins ago" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gpZ-bc-q3K" userLabel="Time">
+                        <rect key="frame" x="111" y="53.5" width="64.5" height="15.5"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&gt;" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nrv-C2-jq3">
+                        <rect key="frame" x="284" y="22.5" width="28" height="68.5"/>
+                        <fontDescription key="fontDescription" name="AlNile" family="Al Nile" pointSize="50"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="gpZ-bc-q3K" firstAttribute="leading" secondItem="2C2-G4-yXf" secondAttribute="trailing" constant="23" id="6dO-TU-BUf"/>
+                    <constraint firstAttribute="centerY" secondItem="Nrv-C2-jq3" secondAttribute="centerY" constant="-6.75" id="TeL-zP-p7O"/>
+                    <constraint firstAttribute="centerY" secondItem="2C2-G4-yXf" secondAttribute="centerY" id="UYn-LD-ssi"/>
+                    <constraint firstItem="7rM-02-dZt" firstAttribute="leading" secondItem="2C2-G4-yXf" secondAttribute="trailing" constant="23" id="dV8-Zp-ZVJ"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Nrv-C2-jq3" secondAttribute="trailing" id="eIK-QP-BbN"/>
+                    <constraint firstItem="2C2-G4-yXf" firstAttribute="centerY" secondItem="gpZ-bc-q3K" secondAttribute="centerY" constant="-12" id="fSl-6X-oAj"/>
+                    <constraint firstItem="2C2-G4-yXf" firstAttribute="centerY" secondItem="7rM-02-dZt" secondAttribute="centerY" constant="15" id="rTg-a2-dxv"/>
+                    <constraint firstItem="2C2-G4-yXf" firstAttribute="leading" secondItem="Ctw-G5-cnb" secondAttribute="leadingMargin" id="y8b-VQ-1Pa"/>
+                </constraints>
+            </tableViewCellContentView>
             <connections>
-                <outlet property="avatarView" destination="2C2-G4-yXf" id="eds-L9-RdW"/>
-                <outlet property="nameLabel" destination="7rM-02-dZt" id="F4M-Yb-Lmr"/>
-                <outlet property="timeLabel" destination="gpZ-bc-q3K" id="Yfe-0X-YGb"/>
+                <outlet property="avatarView" destination="2C2-G4-yXf" id="mOB-uu-j3t"/>
+                <outlet property="nameLabel" destination="7rM-02-dZt" id="bwS-OI-mMN"/>
+                <outlet property="timeLabel" destination="gpZ-bc-q3K" id="XRn-9u-qGC"/>
             </connections>
-            <point key="canvasLocation" x="194" y="275"/>
-        </view>
+            <point key="canvasLocation" x="118" y="443"/>
+        </tableViewCell>
     </objects>
 </document>
